# claude_basics

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/: calculator.py  main.py
tests/: test_calculator.py
